# echo-server

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: ci.yml
kustomize/overlays/dev/: externalsecret-docker.yml  kustomization.yml
src/: main.rs  types.rs
